fix: test cases